TJ2-9/fix-accordion-text-overflow

--- a/src/components/Accordion/Accordion.module.scss
+++ b/src/components/Accordion/Accordion.module.scss
@@ -7,7 +7,7 @@
     margin-bottom: 23px;
 
     .clickable {
-      height: 56px;
+      min-height: 56px;
       display: flex;
       justify-content: space-between;
       align-items: center;
